Add automated tests
